# NoughtAndCrossAI-

tie-toc/: AlphabetaSearcher.cpp  AlphabetaSearcher.h  CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  Evaluator.h  FeEvaluator.cpp  FeEvaluator.h  GameConst.h  GameState.cpp  GameState.h  HumanPlayer.cpp  HumanPlayer.h  MinimaxSearcher.cpp  MinimaxSearcher.h  NegamaxSearcher.cpp  NegamaxSearcher.h  Support.cpp  Support.h  WzEvaluator.cpp  WzEvaluator.h  headLibrary.h
